# HollowAPI

./: .pre-commit-config.yaml
.agent/rules/: mentoring-django.md
backend/: manage.py  pyproject.toml
backend/apps/core/: models.py
backend/apps/core/migrations/: 0001_initial.py  0002_initial.py
backend/apps/mock_engine/: apps.py
backend/apps/users/: models.py  serializers.py  views.py
backend/apps/users/migrations/: 0001_initial.py
backend/apps/users/urls/: auth_urls.py
backend/config/: settings.py
